add language en

--- a/public/404.html
+++ b/public/404.html
@@ -47,7 +47,7 @@ Croak's Blog</a>
 <img src=/images/404_huf404c6818e5475c7870a4722b4efea20_110323_1500x0_resize_box_3.png alt="Page Not Found">
 <div class=message>
 <h1>404</h1>
-<h4>The page you are looking for is not there yet.</h4>
+<h4></h4>
 </div>
 </div>
 </div>
@@ -56,7 +56,33 @@ Croak's Blog</a>
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>Navigation</h5>
+<h5></h5>
+<ul>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#about>关于</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#skills>技能</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#education>教育经历</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#projects>开源项目</a>
+</li>
+</ul>
+</div>
+<div class="col-md-4 col-sm-12">
+<h5></h5>
+<ul>
+<li><a href=mailto:croakexciting@gmail.com target=_blank rel=noopener>
+<span><i class="fas fa-envelope"></i></span> <span>croakexciting@gmail.com</span>
+</a></li>
+<li><a href=https://github.com/dianshao-embedded target=_blank rel=noopener>
+<span><i class="fab fa-github"></i></span> <span>dianshao-embedded</span>
+</a></li>
+<li><span><i class="fas fa-phone-alt"></i></span> <span>+8613073676596</span></li>
+</ul>
 </div>
 </div>
 </div>
@@ -69,9 +95,9 @@ Croak's Blog</a>
 Toha
 </a>
 </div>
-<div class="col-md-4 text-center">© 2021 Copyright.</div>
+<div class="col-md-4 text-center">© 2022 Copyright.</div>
 <div class="col-md-4 text-right">
-<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>Powered by
+<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>
 <img src=/images/hugo-logo.svg alt="Hugo Logo" height=18>
 </a>
 </div>
