--- a/public/content/notes/go/basic/types/index.html
+++ b/public/content/notes/go/basic/types/index.html
@@ -57,7 +57,7 @@ Croak's Blog</a>
 </form>
 <div class=sidebar-tree>
 <ul class=tree id=tree>
-<li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
+<li id=list-heading><a href=/posts data-filter=all></a></li>
 <div class=subtree>
 <li><a href=/content/posts/introduction/ title=ভূমিকা>ভূমিকা</a></li>
 <li>
@@ -87,8 +87,8 @@ Croak's Blog</a>
 </div>
 <div class=page-content>
 <div class="author-profile ml-auto align-self-lg-center">
-<img class=rounded-circle src=/images/default-avatar_hu9bf48a08e17db6472c2e32b73058a6bb_47653_120x120_fit_box_3.png alt="Author Image">
-<h5 class=author-name></h5>
+<img class=rounded-circle src=/images/author/croak_hube02e67427e3b76f0bfa817582194f2f_34324_120x120_fit_q75_box.jpg alt="Author Image">
+<h5 class=author-name>李心宇</h5>
 <p>Monday, January 1, 1</p>
 </div>
 <div class=title>
@@ -178,15 +178,14 @@ Croak's Blog</a>
 </div>
 <div class="row pl-3 pr-3">
 <div class="col-md-6 share-buttons">
-<strong>Share on:</strong>
+<strong>:</strong>
 <a class="btn btn-sm email-btn" href="mailto:?subject=%e0%a6%ac%e0%a7%87%e0%a6%b8%e0%a6%bf%e0%a6%95%20%e0%a6%9f%e0%a6%be%e0%a6%87%e0%a6%aa%20%e0%a6%b8%e0%a6%ae%e0%a7%82%e0%a6%b9&body=https%3a%2f%2fcroakexciting.github.io%2fcontent%2fnotes%2fgo%2fbasic%2ftypes%2f" target=_blank>
 <i class="fas fa-envelope-open-text"></i>
 </a>
 </div>
 <div class="col-md-6 btn-improve-page">
-<a href=https://github.com/hugo-toha/hugo-toha.github.io/edit/source/content/content%5cnotes%5cgo%5cbasic%5ctypes%5cindex.bn.md title="Improve this page" target=_blank rel=noopener>
+<a href=https://github.com/hugo-toha/hugo-toha.github.io/edit/source/content/content%5cnotes%5cgo%5cbasic%5ctypes%5cindex.bn.md title target=_blank rel=noopener>
 <i class="fas fa-code-branch"></i>
-Improve this page
 </a>
 </div>
 </div>
@@ -201,7 +200,7 @@ Improve this page
 </section>
 <section class=toc-section id=toc-section>
 <div class=toc-holder>
-<h5 class="text-center pl-3">Table of Contents</h5>
+<h5 class="text-center pl-3"></h5>
 <hr>
 <div class=toc>
 <nav id=TableOfContents></nav>
@@ -213,7 +212,33 @@ Improve this page
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>Navigation</h5>
+<h5></h5>
+<ul>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#about>关于</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#skills>技能</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#education>教育经历</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#projects>开源项目</a>
+</li>
+</ul>
+</div>
+<div class="col-md-4 col-sm-12">
+<h5></h5>
+<ul>
+<li><a href=mailto:croakexciting@gmail.com target=_blank rel=noopener>
+<span><i class="fas fa-envelope"></i></span> <span>croakexciting@gmail.com</span>
+</a></li>
+<li><a href=https://github.com/dianshao-embedded target=_blank rel=noopener>
+<span><i class="fab fa-github"></i></span> <span>dianshao-embedded</span>
+</a></li>
+<li><span><i class="fas fa-phone-alt"></i></span> <span>+8613073676596</span></li>
+</ul>
 </div>
 </div>
 </div>
@@ -226,9 +251,9 @@ Improve this page
 Toha
 </a>
 </div>
-<div class="col-md-4 text-center">© 2021 Copyright.</div>
+<div class="col-md-4 text-center">© 2022 Copyright.</div>
 <div class="col-md-4 text-right">
-<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>Powered by
+<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>
 <img src=/images/hugo-logo.svg alt="Hugo Logo" height=18>
 </a>
 </div>
