--- a/public/content/index.html
+++ b/public/content/index.html
@@ -100,7 +100,7 @@ const Phi = 1.618
 </div>
 <div class=card-footer>
 <span class=float-left>January 1, 0001</span>
-<a href=/content/notes/go/basic/introduction/ class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/content/notes/go/basic/introduction/ class="float-right btn btn-outline-info btn-sm"></a>
 </div>
 </div>
 </a>
@@ -125,7 +125,7 @@ Arrays
 </div>
 <div class=card-footer>
 <span class=float-left>January 1, 0001</span>
-<a href=/content/notes/go/basic/types/ class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/content/notes/go/basic/types/ class="float-right btn btn-outline-info btn-sm"></a>
 </div>
 </div>
 </a>
@@ -147,7 +147,7 @@ for count := 0; count &lt;= 10; count++ { fmt.</p>
 </div>
 <div class=card-footer>
 <span class=float-left>January 1, 0001</span>
-<a href=/content/notes/go/basic/flow-control/ class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/content/notes/go/basic/flow-control/ class="float-right btn btn-outline-info btn-sm"></a>
 </div>
 </div>
 </a>
@@ -166,7 +166,7 @@ if day == "sunday" || day == "saturday" { rest() } else if day == "monday" && is
 </div>
 <div class=card-footer>
 <span class=float-left>January 1, 0001</span>
-<a href=/content/notes/go/advanced/files/ class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/content/notes/go/advanced/files/ class="float-right btn btn-outline-info btn-sm"></a>
 </div>
 </div>
 </a>
@@ -187,7 +187,7 @@ if [[ -z "$string" ]]; then echo "String is empty" elif [[ -n "$string" ]]; then
 </div>
 <div class=card-footer>
 <span class=float-left>January 1, 0001</span>
-<a href=/content/notes/bash/basic/ class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/content/notes/bash/basic/ class="float-right btn btn-outline-info btn-sm"></a>
 </div>
 </div>
 </a>
@@ -206,7 +206,7 @@ H1 H2 H3 H4 H5 H6 Paragraph Xerum, quo qui aut unt expliquam qui dolut labo. Aqu
 </div>
 <div class=card-footer>
 <span class=float-left>June 8, 2020</span>
-<a href=/content/posts/markdown-sample/ class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/content/posts/markdown-sample/ class="float-right btn btn-outline-info btn-sm"></a>
 </div>
 </div>
 </a>
@@ -224,7 +224,7 @@ H1 H2 H3 H4 H5 H6 Paragraph Xerum, quo qui aut unt expliquam qui dolut labo. Aqu
 </div>
 <div class=card-footer>
 <span class=float-left>June 8, 2020</span>
-<a href=/content/posts/introduction/ class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/content/posts/introduction/ class="float-right btn btn-outline-info btn-sm"></a>
 </div>
 </div>
 </a>
@@ -250,7 +250,7 @@ H1 H2 H3 H4 H5 H6 Paragraph Xerum, quo qui aut unt expliquam qui dolut labo. Aqu
 </div>
 <div class=card-footer>
 <span class=float-left>June 8, 2020</span>
-<a href=/content/posts/shortcodes/ class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/content/posts/shortcodes/ class="float-right btn btn-outline-info btn-sm"></a>
 </div>
 </div>
 </a>
@@ -269,7 +269,7 @@ H1 H2 H3 H4 H5 H6 Paragraph Xerum, quo qui aut unt expliquam qui dolut labo. Aqu
 </div>
 <div class=card-footer>
 <span class=float-left>June 8, 2020</span>
-<a href=/content/posts/category/sub-category/rich-content/ class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/content/posts/category/sub-category/rich-content/ class="float-right btn btn-outline-info btn-sm"></a>
 </div>
 </div>
 </a>
@@ -284,7 +284,33 @@ H1 H2 H3 H4 H5 H6 Paragraph Xerum, quo qui aut unt expliquam qui dolut labo. Aqu
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>Navigation</h5>
+<h5></h5>
+<ul>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#about>关于</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#skills>技能</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#education>教育经历</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#projects>开源项目</a>
+</li>
+</ul>
+</div>
+<div class="col-md-4 col-sm-12">
+<h5></h5>
+<ul>
+<li><a href=mailto:croakexciting@gmail.com target=_blank rel=noopener>
+<span><i class="fas fa-envelope"></i></span> <span>croakexciting@gmail.com</span>
+</a></li>
+<li><a href=https://github.com/dianshao-embedded target=_blank rel=noopener>
+<span><i class="fab fa-github"></i></span> <span>dianshao-embedded</span>
+</a></li>
+<li><span><i class="fas fa-phone-alt"></i></span> <span>+8613073676596</span></li>
+</ul>
 </div>
 </div>
 </div>
@@ -297,9 +323,9 @@ H1 H2 H3 H4 H5 H6 Paragraph Xerum, quo qui aut unt expliquam qui dolut labo. Aqu
 Toha
 </a>
 </div>
-<div class="col-md-4 text-center">© 2021 Copyright.</div>
+<div class="col-md-4 text-center">© 2022 Copyright.</div>
 <div class="col-md-4 text-right">
-<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>Powered by
+<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>
 <img src=/images/hugo-logo.svg alt="Hugo Logo" height=18>
 </a>
 </div>
