--- a/public/search/index.html
+++ b/public/search/index.html
@@ -58,7 +58,7 @@ Croak's Blog</a>
 </form>
 <div class=sidebar-tree>
 <ul class=tree id=tree>
-<li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
+<li id=list-heading><a href=/posts data-filter=all></a></li>
 <div class=subtree>
 <li><a href=/content/posts/introduction/ title=ভূমিকা>ভূমিকা</a></li>
 <li>
@@ -113,7 +113,33 @@ Croak's Blog</a>
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>Navigation</h5>
+<h5></h5>
+<ul>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#about>关于</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#skills>技能</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#education>教育经历</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=https://croakexciting.github.io#projects>开源项目</a>
+</li>
+</ul>
+</div>
+<div class="col-md-4 col-sm-12">
+<h5></h5>
+<ul>
+<li><a href=mailto:croakexciting@gmail.com target=_blank rel=noopener>
+<span><i class="fas fa-envelope"></i></span> <span>croakexciting@gmail.com</span>
+</a></li>
+<li><a href=https://github.com/dianshao-embedded target=_blank rel=noopener>
+<span><i class="fab fa-github"></i></span> <span>dianshao-embedded</span>
+</a></li>
+<li><span><i class="fas fa-phone-alt"></i></span> <span>+8613073676596</span></li>
+</ul>
 </div>
 </div>
 </div>
@@ -126,9 +152,9 @@ Croak's Blog</a>
 Toha
 </a>
 </div>
-<div class="col-md-4 text-center">© 2021 Copyright.</div>
+<div class="col-md-4 text-center">© 2022 Copyright.</div>
 <div class="col-md-4 text-right">
-<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>Powered by
+<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>
 <img src=/images/hugo-logo.svg alt="Hugo Logo" height=18>
 </a>
 </div>
@@ -142,12 +168,6 @@ Toha
 <script type=text/javascript src=/js/plyr.js></script>
 <script type=text/javascript src=/js/main.js></script>
 <script type=text/javascript defer src=/js/katex.min.js></script>
-<script type=text/javascript defer src=/js/auto-render.min.js onload=renderMathInElement(document.body)></script>
-<script src=https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.2.0/fuse.min.js></script>
-<script src=https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.min.js></script>
-<script src=https://croakexciting.github.io/js/search.js></script>
-</body>
-</html>ript defer src=/js/katex.min.js></script>
 <script type=text/javascript defer src=/js/auto-render.min.js onload=renderMathInElement(document.body)></script>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.2.0/fuse.min.js></script>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.min.js></script>
